--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Clock</title>
     <script src="index.js"></script>
 </head>
@@ -18,12 +19,10 @@
     </div>
 
     <div class="container my-4">
-        <div class="jumbotron">
-            <h1 class="display-4">
-                <strong><strong>Current Time: </strong></strong><span id="time">
-                </span>
-            </h1>
-        </div>
+        <h1 class="display-4">
+            <strong>Time: <br></strong><span id="time">
+            </span>
+        </h1>
     </div>
 </body>
 
