--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
         .toggle-button {
             position: absolute;
             top: 20px;
-            right: 20px;
+            margin-top: 10px;
+            /* right: 20px; */
             font-size: 1.5rem;
             background: none;
             border: none;
@@ -181,6 +182,15 @@
         /* Dark mode time-info */
         .dark-mode .time-info {
             color: #ccc;
+        }
+
+        #mode-icon {
+            display: inline-block;
+            transition: transform 1s;
+        }
+
+        .toggle-button:hover #mode-icon {
+            transform: rotate(360deg);
         }
     </style>
 </head>
