--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analog Clock with Day/Night Mode and Digital Time</title>
     <link rel="icon" href="./clock.png" type="image/png">
     <style>
@@ -23,6 +24,7 @@
             min-height: 100vh;
             background: #acbaca;
             transition: background 0.3s;
+            padding: 20px;
         }
 
         /* Dark mode background */
@@ -32,8 +34,8 @@
 
         .clock {
             position: relative;
-            width: 450px;
-            height: 450px;
+            width: min(450px, 90vw);
+            height: min(450px, 90vw);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -51,9 +53,8 @@
 
         .numbers {
             position: absolute;
-            top: 30px;
-            width: 390px;
-            height: 390px;
+            width: 86.67%;
+            height: 86.67%;
             background: #152b4a;
             border-radius: 50%;
             display: flex;
@@ -85,7 +86,7 @@
             inset: 15px;
             text-align: center;
             color: #fff;
-            font-size: 1.25em;
+            font-size: clamp(0.8rem, 3vw, 1.25rem);
             transform: rotate(calc(30deg * var(--i)));
             transition: color 0.3s;
         }
@@ -103,8 +104,8 @@
 
         .numbers .circle {
             position: absolute;
-            width: 280px;
-            height: 280px;
+            width: 72%;
+            height: 72%;
             border: 1px solid rgba(0, 0, 0, 0.75);
             border-radius: 50%;
             display: flex;
@@ -132,13 +133,13 @@
         }
 
         .numbers .circle#min {
-            width: 230px;
-            height: 230px;
+            width: 60%;
+            height: 60%;
         }
 
         .numbers .circle#hrs {
-            width: 180px;
-            height: 180px;
+            width: 45%;
+            height: 45%;
         }
 
         .numbers .circle::before {
@@ -155,10 +156,8 @@
         }
 
         .toggle-button {
-            position: absolute;
-            top: 20px;
-            margin-top: 10px;
-            /* right: 20px; */
+            position: relative;
+            margin-bottom: 20px;
             font-size: 1.5rem;
             background: none;
             border: none;
@@ -173,10 +172,13 @@
         }
 
         .time-info {
-            margin-top: 40px;
+            margin-top: 20px;
             text-align: center;
             color: #333;
-            font-size: 1.25rem;
+            font-size: clamp(0.9rem, 3vw, 1.25rem);
+            width: 100%;
+            padding: 0 10px;
+            word-wrap: break-word;
         }
 
         /* Dark mode time-info */
@@ -191,6 +193,27 @@
 
         .toggle-button:hover #mode-icon {
             transform: rotate(360deg);
+        }
+
+        @media (max-width: 600px) {
+            .time-info {
+                margin-top: 15px;
+            }
+
+            .toggle-button {
+                margin-bottom: 15px;
+            }
+        }
+
+        @media (max-width: 400px) {
+            .numbers .circle::before {
+                width: 8px;
+                height: 8px;
+            }
+
+            .numbers .circle i {
+                transform: scaleY(0.4);
+            }
         }
     </style>
 </head>
@@ -225,7 +248,6 @@
     </div>
 
     <script>
-
         let hr = document.querySelector('#hrs');
         let mn = document.querySelector('#min');
         let sc = document.querySelector('#sec');
