--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             min-height: 100vh;
             background: var(--light-bg);
             transition: background var(--transition-time);
-            padding: 20px;
+            padding: 10px;
             overflow-x: hidden;
         }
 
@@ -76,7 +76,6 @@
             position: relative;
             width: min(450px, 90vw);
             height: min(450px, 90vw);
-            margin: 20px 0;
             transition: transform 0.3s ease;
         }
 
@@ -290,10 +289,8 @@
 
         .toggle-container {
             display: flex;
-            justify-content: center;
             align-items: center;
-            margin-bottom: 20px;
-            position: relative;
+            align-self: flex-end;
         }
 
         .toggle-button {
@@ -338,12 +335,12 @@
         }
 
         .time-info {
-            margin-top: 25px;
+            margin-top: 10px;
             text-align: center;
             color: var(--light-text);
             transition: all var(--transition-time);
             width: 100%;
-            padding: 25px;
+            padding: 10px;
             background: var(--light-card-bg);
             backdrop-filter: blur(10px);
             border-radius: 20px;
@@ -397,7 +394,7 @@
             justify-content: center;
             margin: 15px 0;
             background: rgba(58, 110, 165, 0.05);
-            padding: 15px;
+            padding: 10px;
             border-radius: 15px;
         }
 
